stuck with resolveRoll

--- a/angular/src/app/components/session-page/session-page.component.css
+++ b/angular/src/app/components/session-page/session-page.component.css
@@ -490,9 +490,20 @@ to {
 }
 /* .playerSection  */
 .actualCardOnBoard{
+    border: 1px solid  rgba(0, 0, 0, 0.3);
     background-color: white;
     width: 100%;
     height: 100%;
+
+}
+.playerSection .actualCardOnBoard{
+    cursor: pointer;
+}
+.playerSection .actualCardOnBoard:hover{
+    border: 1px solid  rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.6),
+    0 0 20px rgba(255, 255, 255, 0.6),
+    0 0 40px rgba(255, 255, 255, 0.6);
 }
 
 .playerSection .monsterBordContainer .monster{
